Chapter-11/curl-app-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: curl-pod
  namespace: todoapp-ns
  labels:
    app: curl-pod
spec:
  containers:
    - name: curl
      image: radial/busyboxplus:curl
      command:
        - "sleep"
        - "50000"
