Chapter-11/todo-app-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  labels:
    app: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todoapp
        image: ginigangadharan/todo-app:latest
        ports:
        - containerPort: 3000
