Chapter-11/todo-app-service.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: todoapp-svc
spec:
  type: NodePort
  ports:
    - targetPort: 3000
      port: 3000
      nodePort: 30080
  selector:
    app: todo
