Chapter-11/todo-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: todoapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todoapp-svc
                port:
                  number: 3000
